--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,40 +17,38 @@ ul {
   padding: 0;
   margin-left: 1em;
   margin-right: 1em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   list-style-type: none; }
-  ul li {
-    float: left;
-    display: inline-block; }
-    ul li .titles {
-      padding-top: 3px;
-      height: 60px;
-      width: 100%;
-      background-color: black;
-      opacity: .75;
-      transform: translate(0, -68px);
-      animation-name: fadeIn;
-      animation-duration: 10s;
-      animation-timing-function: linear;
-      animation-iteration-count: 1; }
-      ul li .titles h2 {
-        background-image: url(../image-gallery-assets/UserIconOpt.svg);
-        background-repeat: no-repeat;
-        font-size: .75em;
-        color: white;
-        padding-left: 20px;
-        margin-left: 10px; }
-      ul li .titles h3 {
-        background-image: url(../image-gallery-assets/HeartOpt.svg);
-        background-repeat: no-repeat;
-        font-size: .65em;
-        color: white;
-        padding-left: 20px;
-        margin-left: 10px; }
+  ul .titles {
+    padding-top: 3px;
+    height: 60px;
+    width: 100%;
+    background-color: black;
+    opacity: .75;
+    transform: translate(0, -68px);
+    animation-name: fadeIn;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1; }
+    ul .titles h2 {
+      background-image: url(../image-gallery-assets/UserIconOpt.svg);
+      background-repeat: no-repeat;
+      font-size: .75em;
+      color: white;
+      padding-left: 20px;
+      margin-left: 10px; }
+    ul .titles h3 {
+      background-image: url(../image-gallery-assets/HeartOpt.svg);
+      background-repeat: no-repeat;
+      font-size: .65em;
+      color: white;
+      padding-left: 20px;
+      margin-left: 10px; }
 
-footer {
-  clear: both; }
-  footer p {
-    font-size: .5em; }
+footer p {
+  font-size: .5em; }
 
 @keyframes fadeIn {
   0% {
@@ -61,9 +59,9 @@ footer {
 @media (min-width: 600px) {
   .wrapper {
     max-width: 1000px; }
-  .titles h2 {
-    font-size: 10em; }
-  .titles h3 {
-    font-size: 1.25em; }
   li {
-    overflow: auto; } }
+    padding: 5px; } }
+
+@media (min-width: 800px) {
+  li {
+    padding: 10px; } }
