--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,12 +21,18 @@ p{
    .wrapper
 {
   
-     max-width: 600px;
+     max-width: 1000px;
      margin-left: auto;
      margin-right: auto;
     
 }
 
+img{
+    border-radius: 8px;
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+}
 
  ul{
         padding: 0;
@@ -41,7 +47,8 @@ p{
     
   
     .titles{
-       
+       border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
         padding-top: 3px;
         height: 60px;
         width: 100%;
@@ -53,6 +60,10 @@ p{
         animation-timing-function: linear;
         animation-iteration-count: 1;
         
+      
+        
+        
+        
     h2{
         
         background-image: url(../image-gallery-assets/UserIconOpt.svg);
@@ -60,8 +71,12 @@ p{
         font-size: .75em;
         color:white;
         padding-left: 20px;
-        
         margin-left: 10px;
+        
+        @media (min-width:800px){
+            font-size: .9em;
+            padding-left: 25px;
+        }
     }
     h3{
         background-image: url(../image-gallery-assets/HeartOpt.svg);
@@ -70,6 +85,11 @@ p{
         color:white;
         padding-left: 20px;
         margin-left: 10px;
+        
+         @media (min-width:800px){
+            font-size: .8em;
+            padding-left: 25px;
+        }
     }
     }
     
@@ -89,27 +109,41 @@ p{
 
 @media  (min-width:600px) {
    
-    .wrapper{
-        max-width: 1000px;
-    }
-    
-    .titles{
-        h2{
-          //  font-size: 10em;
-        }
-        h3{
-          //  font-size: 1.25em;
-        }
-    }
-     li{
+  li{
         padding: 5px;
     }
 }
 
-@media  (min-width:800px) {
+
+
+     @media  (min-width:800px) {
     
-    li{
-        padding: 10px;
+       .titles{
+       transform: translate(0,0);
+       animation-name: imageHover;
+       }
+    
+    
+      li:hover .titles{
+        
+        animation-name: imageHover;
+        animation-duration: .5s;
+        animation-timing-function: linear;
+        animation-iteration-count: 1;
+        
     }
     
+    @keyframes imageHover{
+        0%{
+            transform: translate(0,0);
+            overflow: hidden;
+        }
+        
+        
+    }
+    
+
+  li{
+        padding: 10px;
+    }
 }
