--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,12 +13,6 @@ p {
   margin-left: auto;
   margin-right: auto; }
 
-img {
-  border-radius: 8px;
-  object-fit: cover;
-  width: 300px;
-  height: 300px; }
-
 ul {
   padding: 0;
   margin-left: 1em;
@@ -40,6 +34,19 @@ ul {
     animation-duration: 10s;
     animation-timing-function: linear;
     animation-iteration-count: 1; }
+    @media (min-width: 800px) {
+      ul .titles {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: hidden;
+        width: 94%;
+        height: 0;
+        transition: .5s ease;
+        transform: translate(0, -10px);
+        margin-left: 10px;
+        animation-name: none; } }
     ul .titles h2 {
       background-image: url(../image-gallery-assets/UserIconOpt.svg);
       background-repeat: no-repeat;
@@ -77,17 +84,16 @@ footer p {
     padding: 5px; } }
 
 @media (min-width: 800px) {
-  .titles {
-    transform: translate(0, 0);
-    animation-name: imageHover; }
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    width: 300px;
+    height: 300px; }
+  li {
+    position: relative; }
   li:hover .titles {
-    animation-name: imageHover;
-    animation-duration: .5s;
-    animation-timing-function: linear;
-    animation-iteration-count: 1; }
-  @keyframes imageHover {
-    0% {
-      transform: translate(0, 0);
-      overflow: hidden; } }
+    height: 30%; }
   li {
     padding: 10px; } }
