Fixed logo animation in js

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,8 @@ html {
 
 body {
   font: 1.6rem/ 1.25  Arial, sans-serif, Georgia;
-  margin: 0 auto; }
+  margin: 0 auto;
+  background-color: lightgray; }
 
 p {
   color: black; }
@@ -51,7 +52,7 @@ ul {
     opacity: .75;
     transform: translate(0, -68px);
     animation-name: fadeIn;
-    animation-duration: 10s;
+    animation-duration: 5s;
     animation-timing-function: linear;
     animation-iteration-count: 1; }
     @media (min-width: 800px) {
@@ -70,10 +71,10 @@ ul {
     ul .titles h2 {
       background-image: url(../image-gallery-assets/UserIconOpt.svg);
       background-repeat: no-repeat;
-      font-size: .75em;
       color: white;
       padding-left: 20px;
-      margin-left: 10px; }
+      margin-left: 10px;
+      font: .75em EloquentJFSmallCapsPro; }
       @media (min-width: 800px) {
         ul .titles h2 {
           font-size: .9em;
@@ -90,8 +91,14 @@ ul {
           font-size: .8em;
           padding-left: 25px; } }
 
-footer p {
-  font-size: .5em; }
+footer {
+  display: flex;
+  justify-content: center; }
+  footer p {
+    font-size: .5em; }
+    @media (min-width: 800px) {
+      footer p {
+        font-size: .75em; } }
 
 @keyframes fadeIn {
   0% {
@@ -101,15 +108,18 @@ footer p {
 
 @keyframes logoCombineBack {
   from {
-    transform: translate(21px, 14px); }
+    transform: translate(21px, 14px);
+    opacity: 0; }
   to {
-    transform: translate(0, 0); } }
+    transform: translate(0, 0);
+    opacity: 1; } }
 
 @keyframes logoCombineFront {
   0% {
-    transform: translate(-27px, -11px); }
+    transform: translate(-27px, -11px);
+    opacity: 0; }
   100% {
-    opacity: .75; } }
+    opacity: 1; } }
 
 @media (min-width: 600px) {
   li {
