--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,14 +14,14 @@ p {
   margin-left: auto;
   margin-right: auto; }
 
+img {
+  border-radius: 5px; }
+
 #logo {
   width: 150px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 15px; }
-
-.red {
-  background-color: aqua; }
 
 .BackPeakAnim {
   animation-name: logoCombineBack;
@@ -100,6 +100,11 @@ footer {
       footer p {
         font-size: .75em; } }
 
+#results {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  padding-top: 20px; }
+
 @keyframes fadeIn {
   0% {
     opacity: 0; }
@@ -138,4 +143,6 @@ footer {
   li:hover .titles {
     height: 25%; }
   li {
-    padding: 10px; } }
+    padding: 10px; }
+  #results {
+    padding-bottom: 20px; } }
