--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,9 @@ p{
     
 }
 
+img{
+    border-radius: 5px;
+}
 
 #logo{
     width:150px;
@@ -35,9 +38,7 @@ p{
     margin-top: 15px;
 }
 
-.red{
-    background-color: aqua;
-}
+
 
 .BackPeakAnim{
     
@@ -158,6 +159,13 @@ p{
         }
          
     }
+
+#results{
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding-top: 20px;
+   // padding-bottom: 20px;
+}
      @keyframes fadeIn{
         0%{opacity:0; }
         100%{opacity: .75;}
@@ -206,9 +214,14 @@ p{
         
          height: 25%
      
-    }
+        }
 
-  li{
+      li{
         padding: 10px;
-    }
+        }
+         
+    #results{
+       
+    padding-bottom: 20px;
+        }
 }
